--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
     <string name="app_name">icepop</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- fragment_login.xml -->
+    <string name="login_text_hint">아이디(이메일) 입력</string>
+    <string name="password_text_hint">비밀번호 입력</string>
+    <string name="login_text">로그인</string>
+    <string name="sign_up_text">회원가입</string>
 </resources>
