--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,9 +2,26 @@
     <string name="app_name">icepop</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <!-- fragment_login.xml -->
-    <string name="login_text_hint">아이디(이메일) 입력</string>
-    <string name="password_text_hint">비밀번호 입력</string>
-    <string name="login_text">로그인</string>
+    <!-- fragment_login.xml, -->
+    <string name="login_input_hint">아이디(이메일) 입력</string>
+    <string name="password_input_hint">비밀번호 입력</string>
+
+    <!-- fragment_signup.xml -->
     <string name="sign_up_text">회원가입</string>
+    <string name="login_hint">아이디(이메일)</string>
+    <string name="password_hint">비밀번호</string>
+    <string name="login">로그인</string>
+    <string name="nickname">닉네임(이름)</string>
+    <string name="age_select">나이대 선택</string>
+    <string name="male">남자</string>
+    <string name="female">여자</string>
+    <string name="join">가입하기</string>
+
+    <string-array name="age_items" translatable="false">
+        <item>10</item>
+        <item>20</item>
+        <item>30</item>
+        <item>40</item>
+        <item>50 ~</item>
+    </string-array>
 </resources>
