--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">icepop</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <!-- fragment_login.xml, -->
+    <!-- fragment_login.xml -->
     <string name="login_input_hint">아이디(이메일) 입력</string>
     <string name="password_input_hint">비밀번호 입력</string>
 
@@ -24,4 +24,9 @@
         <item>40</item>
         <item>50 ~</item>
     </string-array>
+
+    <!-- menu/bottom.nav.xml-->
+    <string name="home">Home</string>
+    <string name="list">List</string>
+    <string name="my_page">Mypage</string>
 </resources>
